--- a/HTML learning project/HTML.html
+++ b/HTML learning project/HTML.html
@@ -21,7 +21,10 @@
 
 <p>Right now, I'm listening to <a href="https://www.youtube.com/watch?v=bB5HSU-V-DQ" title="森の組曲">Forest Suite</a> by Tatsuya Koumazaki and Febian Reza Pane.</p>
 
-<p> Here's an inspiring <a href="/HTML Learning Project/Side Garden.jpg">image for Jackie's family castle</a> from my third novel, Yumejo.</p>	
+<p> Here's an inspiring <a href="/HTML Learning Project/SideGarden.jpg">image for Jackie's family castle</a> from my third novel, Yumejo.</p>
+## above is example of CamelCase
+	
+<p>Here's a link to a <a href="../micshar92/David Foster Wallace Quote.html">David Foster Wallace quote.</a></p>
 	
 </body>
 
